# eminem

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  create-tag.yaml  doxygenate.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  Parser_8hpp.html  Parser_8hpp_source.html  annotated.html  classeminem_1_1GzipFileParser-members.html  classeminem_1_1GzipFileParser.html  classeminem_1_1GzipFileParser__inherit__graph.map  classeminem_1_1GzipFileParser__inherit__graph.md5  classeminem_1_1Parser-members.html  classeminem_1_1Parser.html  classeminem_1_1Parser__inherit__graph.map  classeminem_1_1Parser__inherit__graph.md5  classeminem_1_1SomeBufferParser-members.html  classeminem_1_1SomeBufferParser.html  classeminem_1_1SomeBufferParser__coll__graph.map  classeminem_1_1SomeBufferParser__coll__graph.md5  classeminem_1_1SomeFileParser-members.html  classeminem_1_1SomeFileParser.html  classeminem_1_1SomeFileParser__coll__graph.md5  classeminem_1_1SomeFileParser__inherit__graph.map  classeminem_1_1TextBufferParser-members.html  classeminem_1_1TextBufferParser.html  classeminem_1_1TextBufferParser__coll__graph.md5  classeminem_1_1TextBufferParser__inherit__graph.map  classeminem_1_1TextFileParser-members.html  classeminem_1_1TextFileParser.html  classeminem_1_1TextFileParser__inherit__graph.map  classeminem_1_1TextFileParser__inherit__graph.md5  classeminem_1_1ZlibBufferParser-members.html  classeminem_1_1ZlibBufferParser.html  classeminem_1_1ZlibBufferParser__coll__graph.md5  classeminem_1_1ZlibBufferParser__inherit__graph.map  classes.html  dir_4d27aa35ce274278fb68fb8a42c3ac8d.html  doxygen_crawl.html  eminem.tag  eminem_8hpp.html  eminem_8hpp_source.html  files.html  from__gzip_8hpp.html  (+94 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  (+37 more)
include/eminem/: Parser.hpp  eminem.hpp  from_gzip.hpp  from_text.hpp  utils.hpp
perf/: CMakeLists.txt
perf/src/: read_mm.cpp
tests/: CMakeLists.txt
tests/src/: Parser.cpp  array_matrix.cpp  array_vector.cpp  complex.cpp  coordinate_matrix.cpp  coordinate_vector.cpp  format.h  from_gzip.cpp  from_text.cpp  integer.cpp  pattern_matrix.cpp  pattern_vector.cpp  preamble.cpp  real.cpp  simulate.h  test_error.h
